--- a/my-app/src/components/footer.css
+++ b/my-app/src/components/footer.css
@@ -1,32 +1,50 @@
+/* footer.css */
+
+/* Animation for footer text color */
+.footer ul,
+.footer li,
+.footer a,
+.footer h5,
+.footer p {
+  transition: color 0.3s ease-in-out; /* Add transition for text color */
+}
+
+.footer ul:hover,
+.footer li:hover,
+.footer a:hover,
+.footer h5:hover,
+.footer p:hover {
+  color: #17a2b8; /* Change text color on hover */
+}
+
+/* Other styles for the footer */
 .footer {
-    background-color: #0b10184d; /* Цвет фона, схожий с цветом хедера */
-    color: #fff;
-    padding: 50px 0;
-    text-align: center;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  background-color: #343a40;
+  color: #fff;
+  display: flex; /* Set display to flex */
+  flex-direction: column; /* Arrange items in a column */
+  justify-content: center; /* Center items vertically */
+  align-items: center; /* Center items horizontally */
+ 
 }
 
 .footer h5 {
-    color: #55acee; /* Twitter color */
+  color: #fff;
 }
 
-.footer p {
-    color: #ccc;
+.footer a {
+  color: #fff;
+  text-decoration: none; /* Remove default underline */
 }
 
-.social-icons a {
-    color: #fff;
-    font-size: 24px;
-    margin-right: 15px;
-    transition: color 0.3s ease, transform 0.3s ease;
+.footer a:hover {
+  text-decoration: underline;
 }
 
-.social-icons a:hover {
-    color: #55acee;
-    transform: scale(1.1);
+.footer p::selection {
+  background-color: transparent;
 }
 
-.footer hr {
-    border-top: 1px solid #555;
+.footer a::selection {
+  background-color: transparent;
 }
